--- a/src/App.css
+++ b/src/App.css
@@ -167,11 +167,11 @@ li:hover {
   margin-top:1em;
 }
 
-.THREEContainer{
-  max-height: 600px;
-  /*max-width:800px;*/
-  width:800px;
-  position: absolute;
+#THREEContainer{
+  /*max-height: 600px;*/
+  /*!*max-width:800px;*!*/
+  /*width:800px;*/
+  /*position: absolute;*/
   background: black;
 }
 
